# ray-tracing-trash

./: Cargo.toml
.cargo/: config.toml
src/: camera.rs  main.rs  ray.rs  vec3.rs
src/hittable/: hittable_list.rs  mod.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
tests/: rng_bench.rs
